# stellar-name-service

./: CODING_GUIDE.md  CONTRIBUTING.md  Cargo.toml  justfile
.github/workflows/: test.yml
.soroban/: config.toml
components/ui/: AppThemeProvider.tsx
contracts/registrar/: Cargo.toml  README.md
contracts/registrar/src/: lib.rs
contracts/registry/: Cargo.toml  README.md
contracts/registry/src/: lib.rs
contracts/resolver/: Cargo.toml  README.md
contracts/resolver/src/: lib.rs
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/my-names/: page.tsx
frontend/app/name/[fqdn]/: page.tsx
frontend/components/resolver/: ResultCard.tsx  SearchBox.tsx  StatusBanner.tsx
frontend/components/ui/: AppThemeProvider.tsx  Container.tsx  Footer.tsx  Header.tsx  MenuSheet.tsx
frontend/components/wallet/: ConnectWalletButton.tsx  NameCard.tsx  RegisterNameCard.tsx  RegisteredNamesList.tsx  SendPaymentButton.tsx  WalletProvider.tsx
frontend/lib/: config.ts  contractUtils.ts  indexerClient.ts  network.ts  theme.ts  utils.ts
indexer/: .env  .env.example  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
indexer/src/: backfill.ts  config.ts  db.ts  ingest.ts  parse.ts  schema.sql  server.ts
indexer/src/routes/: resolve.ts
indexer/src/utils/: name.ts
indexer/test/: resolve.test.ts  tsconfig.json
lib/: theme.ts
scripts/: commitment-helper.js  deploy_local.sh  namehash.js  register-local.sh
